--- a/MidTermProject/MidTermProject.csproj
+++ b/MidTermProject/MidTermProject.csproj
@@ -71,6 +71,12 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormManageStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormManageStudent.Designer.cs">
+      <DependentUpon>FormManageStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSearchStudent.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormManageStudent.resx">
+      <DependentUpon>FormManageStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrint.resx">
       <DependentUpon>FormPrint.cs</DependentUpon>
