--- a/MidTermProject/MidTermProject.csproj
+++ b/MidTermProject/MidTermProject.csproj
@@ -47,120 +47,105 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormAddStudent.cs">
+    <Compile Include="View\FormAddStudent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormAddStudent.Designer.cs">
+    <Compile Include="View\FormAddStudent.Designer.cs">
       <DependentUpon>FormAddStudent.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormEditRemove.cs">
+    <Compile Include="View\FormEditRemove.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormEditRemove.Designer.cs">
+    <Compile Include="View\FormEditRemove.Designer.cs">
       <DependentUpon>FormEditRemove.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormLogin.cs">
+    <Compile Include="View\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormLogin.Designer.cs">
+    <Compile Include="View\FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMain.cs">
+    <Compile Include="View\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
+    <Compile Include="View\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormManageStudent.cs">
+    <Compile Include="View\FormManageStudent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormManageStudent.Designer.cs">
+    <Compile Include="View\FormManageStudent.Designer.cs">
       <DependentUpon>FormManageStudent.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormSearchStudent.cs">
+    <Compile Include="View\FormSearchStudent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormSearchStudent.Designer.cs">
+    <Compile Include="View\FormSearchStudent.Designer.cs">
       <DependentUpon>FormSearchStudent.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormShowData.cs">
+    <Compile Include="View\FormShowData.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormShowData.Designer.cs">
+    <Compile Include="View\FormShowData.Designer.cs">
       <DependentUpon>FormShowData.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormSignUp.cs">
+    <Compile Include="View\FormSignUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormSignUp.Designer.cs">
+    <Compile Include="View\FormSignUp.Designer.cs">
       <DependentUpon>FormSignUp.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormStatics.cs">
+    <Compile Include="View\FormStatics.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormStatics.Designer.cs">
+    <Compile Include="View\FormStatics.Designer.cs">
       <DependentUpon>FormStatics.cs</DependentUpon>
     </Compile>
-    <Compile Include="ManageAccount.cs" />
-    <Compile Include="MyAccount.cs" />
-    <Compile Include="MyDB.cs" />
-    <Compile Include="FormPrint.cs">
+    <Compile Include="Function\ManageAccount.cs" />
+    <Compile Include="Function\MyAccount.cs" />
+    <Compile Include="Function\MyDB.cs" />
+    <Compile Include="View\FormPrint.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormPrint.Designer.cs">
+    <Compile Include="View\FormPrint.Designer.cs">
       <DependentUpon>FormPrint.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Function\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="STUDENT.cs" />
+    <Compile Include="Function\STUDENT.cs" />
     <Compile Include="studentDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>studentDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="studentDataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>studentDataSet1.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="studentDataSet2.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>studentDataSet2.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="studentDataSet3.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>studentDataSet3.xsd</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="FormAddStudent.resx">
+    <EmbeddedResource Include="View\FormAddStudent.resx">
       <DependentUpon>FormAddStudent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormEditRemove.resx">
+    <EmbeddedResource Include="View\FormEditRemove.resx">
       <DependentUpon>FormEditRemove.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormLogin.resx">
+    <EmbeddedResource Include="View\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMain.resx">
+    <EmbeddedResource Include="View\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormManageStudent.resx">
+    <EmbeddedResource Include="View\FormManageStudent.resx">
       <DependentUpon>FormManageStudent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormPrint.resx">
+    <EmbeddedResource Include="View\FormPrint.resx">
       <DependentUpon>FormPrint.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormSearchStudent.resx">
+    <EmbeddedResource Include="View\FormSearchStudent.resx">
       <DependentUpon>FormSearchStudent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormShowData.resx">
+    <EmbeddedResource Include="View\FormShowData.resx">
       <DependentUpon>FormShowData.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormSignUp.resx">
+    <EmbeddedResource Include="View\FormSignUp.resx">
       <DependentUpon>FormSignUp.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormStatics.resx">
+    <EmbeddedResource Include="View\FormStatics.resx">
       <DependentUpon>FormStatics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -191,39 +176,6 @@
     </None>
     <None Include="studentDataSet.xss">
       <DependentUpon>studentDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="studentDataSet1.xsc">
-      <DependentUpon>studentDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="studentDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>studentDataSet1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="studentDataSet1.xss">
-      <DependentUpon>studentDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="studentDataSet2.xsc">
-      <DependentUpon>studentDataSet2.xsd</DependentUpon>
-    </None>
-    <None Include="studentDataSet2.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>studentDataSet2.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="studentDataSet2.xss">
-      <DependentUpon>studentDataSet2.xsd</DependentUpon>
-    </None>
-    <None Include="studentDataSet3.xsc">
-      <DependentUpon>studentDataSet3.xsd</DependentUpon>
-    </None>
-    <None Include="studentDataSet3.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>studentDataSet3.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="studentDataSet3.xss">
-      <DependentUpon>studentDataSet3.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -267,5 +219,6 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
