--- a/MidTermProject/App.config
+++ b/MidTermProject/App.config
@@ -6,6 +6,9 @@
         <add name="MidTermProject.Properties.Settings.studentConnectionString"
             connectionString="Data Source=DESKTOP-1559CCJ;Initial Catalog=student;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="MidTermProject.Properties.Settings.coursesConnectionString"
+            connectionString="Data Source=DESKTOP-1559CCJ;Initial Catalog=courses;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
