--- a/MidTermProject/App.config
+++ b/MidTermProject/App.config
@@ -9,6 +9,9 @@
         <add name="MidTermProject.Properties.Settings.coursesConnectionString"
             connectionString="Data Source=DESKTOP-1559CCJ;Initial Catalog=courses;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="MidTermProject.Properties.Settings.StudentManageConnectionString"
+            connectionString="Data Source=DESKTOP-1559CCJ;Initial Catalog=StudentManage;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
